--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,7 @@ pickleshare==0.7.5
 Pillow==9.5.0
 platformdirs==3.10.0
 prompt-toolkit==3.0.39
-protobuf==4.23.4
+protobuf==4.23.4  # TensorFlow may require an updated version
 psutil==5.9.5
 pure-eval==0.2.2
 pyarrow==12.0.1
@@ -80,7 +80,6 @@ tensorboard==2.13.0
 tensorboard-data-server==0.7.1
 tensorflow==2.13.0
 tensorflow-estimator==2.13.0
-tensorflow-intel==2.13.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.3.0
 tk==0.1.0
